test/features/errors/semantic/e1047_cannot_borrow_mut_field.spl
# E1047: Cannot Borrow Mutable Field

Feature: E1047 - Cannot Borrow Field as Mutable
  As a Simple compiler
  I want to detect when fields cannot be borrowed as mutable
  So that mutable borrows follow capability rules

  Background:
    Given I have the Simple compiler

  Scenario: Borrowing field of immutable struct
    When I compile:
      '''
      struct Container:
        data: [i32]

      fn test():
        val c = Container { data: [1, 2, 3] }
        modify(mut c.data)  # Error: c is immutable
      '''
    Then I should see error E1047 at line 6
    And the error message should be "cannot borrow field `{field}` as mutable"
    And the label should indicate "cannot borrow as mutable"
    And the help should suggest "ensure the parent struct has mutable capability"

  Scenario: Valid mutable field borrow
    When I compile:
      '''
      struct Container:
        data: [i32]

      fn test():
        var c = Container { data: [1, 2, 3] }
        modify(mut c.data)  # OK: c is mutable
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        val c = Container { data: [] }
        borrow_mut(mut c.data)
      '''
    Then I should see error E1047
    And the error message should contain "가변 필드 차용 불가"
